# SO1-Proyecto2

./: README.md
consumer/: Dockerfile  go.mod  go.sum  main.go
deploy/: clusterkafka.yaml  confgrpc.yaml  configmap.yaml  consumer.yaml  deployrust.yaml  grafana.yaml  mongodb.yaml  redis.yaml
frontend/: Dockerfile  package-lock.json
frontend/src/: App.vue
grpc/clientegrpc/: Dockerfile  go.mod  go.sum  main.go
grpc/clientegrpc/protof/: artist.proto  artist_grpc.pb.go
grpc/servergrpc/: Dockerfile  go.mod  go.sum  main.go
grpc/servergrpc/protof/: artist.pb.go
ingress/: ingress.yaml
locust/: data.json  main.py
rust/client/: Cargo.toml  Dockerfile
rust/client/src/: main.rs
rust/server/: Cargo.toml  Dockerfile
rust/server/src/: main.rs
topic/: top.yaml
webapp/: Dockerfile  index.js  package-lock.json  package.json
webapp/Router/: router.js
