[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.3", features = ["json"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_cors = "0.6.0"
rocket_codegen="0.5.0"